# HybAligner

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README.md  hyb_align.py  hyb_align_tui.py  install.sh  log.md  requirements.txt  setup.py
benchmark/: bench.py  bench_fast.json  bench_real.py  bench_result.json  bench_result_noseed.json
cpu/: chain.py  cigar.py
cuda/: align_kernel.cu  seed_kernel.cu
gpu/: dgx_optimize.py  fast_align.py  gap_fixes.py  gpu_seed.py  hybrid_align.py  longread_align.py  seeder.py  streams.py  wgs_align.py  worker.py
obs/: log.py
runtime/: manager.py  scheduler.py
rust_fast_align/: Cargo.toml
rust_fast_align/src/: align.rs  cuda.rs  encode.rs  fastq.rs  lib.rs  main.rs  seed.rs  wgs.rs
tests/: conftest.py  test_chain.py  test_cigar.py  test_log.py  test_manager.py  test_scheduler.py  test_seeder.py  test_worker.py
