[package]
name = "hyb-align"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated sequence aligner — Rust fast path for HybAligner"
license = "MIT"

[[bin]]
name = "hyb-align"
path = "src/main.rs"

[[bin]]
name = "hyb-align-seeded"
path = "src/bin/seed_align.rs"

[dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Fast I/O — memory-mapped file reading
memmap2 = "0.9"

# Zero-copy byte search (FASTQ newline scanning)
memchr = "2"

# Dynamic library loading (libcuda_kernels.so)
libloading = "0.8"

# JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
